--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@
 */Saved
 OperationIndigo/Content/StarterContent/Textures
 OperationIndigo/Content/StarterContent/HDRI
+OperationIndigo/.vs
 
 ########################
 #Visual Generated Files#
